--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "commonjs",
+  "homepage": "https://TriboRibo.github.io/Webrom_front_test",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
